--- a/docker/docker-compose-metrics.yml
+++ b/docker/docker-compose-metrics.yml
@@ -1,4 +1,5 @@
 version: '2'
+
 services:
   habra-tm-habr:
       image: habra-tm-habr:rc1
@@ -8,3 +9,32 @@ services:
       ports:
         - "8081:8080"
         - "9091:9090"
+
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+#    logging:
+#      driver: 'none'
+
+  grafana:
+    image: grafana/grafana:latest
+    logging:
+      driver: 'none'
+    volumes:
+      - ./grafana.ini:/etc/grafana/grafana.ini
+      - ./datasource.yml:/etc/grafana/provisioning/datasources/datasource.yaml
+    ports:
+      - "3000:3000"
+#    links:
+#      - prometheus
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    restart: unless-stopped
+    expose:
+      - 9100
+    logging:
+      driver: 'none'
